// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate async function 2`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ENTER fn:",
    "{ a: 10 }",
  ],
  Array [
    Object {
      "id": 1,
    },
    " EXIT fn:",
    "20",
  ],
  Array [
    Object {
      "id": 2,
    },
    "ENTER fn:",
    "{ a: -10 }",
  ],
]
`;

exports[`validate async function 3`] = `
Array [
  Array [
    Object {
      "id": 2,
    },
    "ERROR fn: { a: -10 } 
",
    [Error: Validation error: 'a' must be greater or equal to 0.],
  ],
]
`;

exports[`validate sync function 2`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ENTER fn:",
    "{ a: 10 }",
  ],
  Array [
    Object {
      "id": 1,
    },
    " EXIT fn:",
    "20",
  ],
  Array [
    Object {
      "id": 2,
    },
    "ENTER fn:",
    "{ a: -10 }",
  ],
]
`;

exports[`validate sync function 3`] = `
Array [
  Array [
    Object {
      "id": 2,
    },
    "ERROR fn: { a: -10 } 
",
    [Error: Validation error: 'a' must be greater or equal to 0.],
  ],
]
`;

exports[`with removeOutput 1`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ENTER fn:",
    "{ a: 10 }",
  ],
  Array [
    Object {
      "id": 1,
    },
    " EXIT fn:",
    "<removed>",
  ],
]
`;
